<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.unitech.app.reader.bluetooth.inventory.rfid.MainActivity" >

    <!-- App Version -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:text="@string/app_version"
            android:textColor="@color/caption_color"
            android:textSize="15sp"/>
        
        <View android:layout_width="5dp" android:layout_height="1dp"/>
        
        <TextView android:id="@+id/app_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:text="@string/default_version"
            android:textColor="@color/value_color"
            android:textSize="15sp"
            android:textStyle="bold"/>
        
    </LinearLayout>
	
	<!-- Bleuetooth Device Info -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:text="@string/device_info"
            android:textColor="@color/caption_color"
            android:textSize="15sp"/>
        
        <View android:layout_width="5dp" android:layout_height="1dp"/>
        
        <TextView android:id="@+id/bluetooth_device"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:text="@string/default_unknown"
            android:textColor="@drawable/device_info_text_color_selector"
            android:textSize="15sp"/>
        
        <View android:layout_width="5dp" android:layout_height="1dp"/>
        
        <TextView android:id="@+id/bluetooth_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:text="@string/default_unknown"
            android:textColor="@drawable/device_info_text_color_selector"
            android:textSize="15sp"/>
        
    </LinearLayout>
    
    <View android:layout_width="match_parent" android:layout_height="5dp"/>
    
    <LinearLayout android:id="@+id/linear_inventory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">
    
        <!-- Data List -->
	    <ListView android:id="@+id/data_list"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:background="@drawable/frame_rectangle" />
        
	    <View android:layout_width="match_parent" android:layout_height="5dp"/>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	        <TextView 
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:gravity="center_vertical|center"
	            android:text="@string/tag_count"
	            android:textSize="16sp"
	            android:textStyle="bold"
	            android:textColor="@color/black"/>
	        
	        <TextView android:id="@+id/tag_count"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center_vertical|center"
	            android:text="@string/default_count"
	            android:textSize="16sp"
	            android:textStyle="bold"
	            android:textColor="@color/red"/>

	        <TextView android:id="@+id/total_tag_count"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center_vertical|center"
	            android:text="@string/default_count"
	            android:textSize="16sp"
	            android:textStyle="bold"
	            android:textColor="@color/green"/>
	        	        	        
	    </LinearLayout>
	    
	    <View android:layout_width="match_parent" android:layout_height="5dp"/>
	    
	    <Button android:id="@+id/action"
	        style="android:Widget.Holo.Light.Button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/action_start" />
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        tools:ignore="UselessParent">
	    
		    <Button android:id="@+id/setting"
		        style="android:Widget.Holo.Light.Button"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
				android:text="@string/action_setting" />
	    
		    <Button android:id="@+id/clear"
		        style="android:Widget.Holo.Light.Button"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/action_clear"/>
	        	        
	    </LinearLayout>
	    
    </LinearLayout>
    
</LinearLayout>
